# Schizophasia

./: CMakeLists.txt  README.md  arrays.c  arrays.h  audiopayloads.c  audiopayloads.h  graphicalpayloads.c  graphicalpayloads.h  main.c  main.h  miscpayloads.c  miscpayloads.h  waveforms.c  waveforms.h
bootloader/: boot.asm
